Fix case study layouts to match desired format with study-layout structure

--- a/cs-color-me.html
+++ b/cs-color-me.html
@@ -49,6 +49,20 @@
             <div class="block"><strong>Role</strong> Product Designer & Developer</div>
             <div class="block"><strong>Team</strong> Solo project with design community feedback</div>
           </div>
+
+          <h3>The Problem</h3>
+          <p>Designers spend too much time searching for harmonious color palettes that work well together. The process of finding color inspiration, testing combinations, and ensuring accessibility compliance was fragmented across multiple tools and websites, slowing down the design process.</p>
+
+          <h3>The Solution</h3>
+          <p>Created Color.me — a streamlined web tool that generates color harmonies using color theory principles, allows quick palette testing, and provides accessibility information, all in one interface.</p>
+
+          <h3>Impact</h3>
+          <ul>
+            <li>Personal productivity increase of 60% when creating style guides</li>
+            <li>200+ designers using the tool weekly after soft launch</li>
+            <li>Average session time of 8 minutes with high return usage</li>
+            <li>Integrated into workflow of 3 design agencies after beta testing</li>
+          </ul>
           <div class="study-intro">
             <h3>The Problem</h3>
             <p>Designers spend too much time searching for harmonious color palettes that work well together. The process of finding color inspiration, testing combinations, and ensuring accessibility compliance was fragmented across multiple tools and websites, slowing down the design process.</p>
