Add relevant images to case studies in appropriate sections

--- a/cs-nrg-seo-tool.html
+++ b/cs-nrg-seo-tool.html
@@ -165,6 +165,10 @@
                         <li>Data storytelling approach</li>
                         <li>Accessibility-first design</li>
                     </ul>
+                    
+                    <div class="design-diagram">
+                        <img src="images/information-architecture-nrg.jpeg" alt="National Research Group information architecture" class="architecture-image">
+                    </div>
                 </section>
 
                 <section id="designs" class="study-section">
@@ -182,6 +186,10 @@
                         <li>90% of users found interface intuitive</li>
                         <li>85% used mobile features regularly</li>
                     </ul>
+                    
+                    <div class="ab-test-results">
+                        <img src="images/ab-test-nrg.jpg" alt="National Research Group A/B test results" class="ab-test-image">
+                    </div>
                 </section>
 
                 <section id="reflection" class="study-section">
