Add preloader with animated progress bar and percentage display

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     <meta property="og:image" content="assets/og.png" />
 </head>
 <body>
+    <!-- Preloader -->
+    <div class="preloader">
+        <div class="loader-content">
+            <div class="loader-percentage">0%</div>
+            <div class="loader-bar">
+                <div class="loader-progress"></div>
+            </div>
+        </div>
+    </div>
+
     <header class="site-header minimal">
         <nav class="nav right-nav">
             <div class="nav-links">
