Add sun and moon tracker with day/night cycle animation to hero section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,28 @@
 
     <main>
         <section id="hero" class="hero minimal-hero">
+            <!-- Sun Tracker -->
+            <div class="sun-tracker" id="sunTracker">
+                <div class="sun-path">
+                    <div class="sun" id="sun"></div>
+                </div>
+                <div class="sun-info" id="sunInfo">
+                    <span id="currentTime">Loading...</span>
+                    <span>Day Progress: <span id="dayProgress">0%</span></span>
+                </div>
+            </div>
+
+            <!-- Moon Tracker -->
+            <div class="moon-tracker" id="moonTracker">
+                <div class="moon-path">
+                    <div class="moon" id="moon"></div>
+                </div>
+                <div class="moon-info" id="moonInfo">
+                    <span id="currentTimeMoon">Loading...</span>
+                    <span>Night Progress: <span id="nightProgress">0%</span></span>
+                </div>
+            </div>
+
             <div class="container narrow">
                 <h1 class="hero-title" id="scramble-title">JAY PHAM</h1>
                 <p class="hero-subtitle">PRODUCT DESIGNER</p>
