--- a/about.html
+++ b/about.html
@@ -43,12 +43,24 @@
                             I'm a product designer based in San Francisco, passionate about creating meaningful digital experiences. 
                             I blend design sensibility with engineering rigor to ship high-quality features that users love.
                         </p>
-                        <a href="mailto:you@example.com" class="contact-cta">
-                            Get in touch
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-                                <path d="M7 17L17 7M17 7H7M17 7V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                        </a>
+                        <div class="about-actions">
+                            <a href="mailto:jay.pham25@gmail.com" class="contact-cta">
+                                Get in touch
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                                    <path d="M7 17L17 7M17 7H7M17 7V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </a>
+                            <a href="resume.pdf" class="resume-button" target="_blank" rel="noopener noreferrer">
+                                Resume
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <polyline points="14,2 14,8 20,8" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <line x1="16" y1="13" x2="8" y2="13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <line x1="16" y1="17" x2="8" y2="17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <polyline points="10,9 9,9 8,9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </a>
+                        </div>
                     </div>
                     
                     <div class="work-experience">
@@ -114,7 +126,7 @@
                 <div class="footer-cta">
                     <h3>Contact</h3>
                     <h2>Let's start creating together</h2>
-                    <a href="mailto:you@example.com" class="footer-cta-button">
+                    <a href="mailto:jay.pham25@gmail.com" class="footer-cta-button">
                         Let's talk
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true">
                             <path d="M7 17L17 7M17 7H7M17 7V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -129,7 +141,7 @@
                         <a href="index.html#work">Work</a>
                         <a href="about.html">About</a>
                         <a href="radio.html">Radio</a>
-                        <a href="mailto:you@example.com">Contact</a>
+                        <a href="mailto:jay.pham25@gmail.com">Contact</a>
                     </div>
                     
                     <div class="footer-social">
