--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <div class="container narrow">
                 <h2 class="eyebrow">Contact</h2>
                 <p>Open to freelance and full-time opportunities.</p>
-                <a class="button primary" href="mailto:you@example.com">Email me</a>
+                <a class="button primary" href="mailto:jay.pham25@gmail.com">Email me</a>
             </div>
         </section>
     </main>
@@ -231,7 +231,7 @@
                 <div class="footer-cta">
                     <h3>Contact</h3>
                     <h2>Let's start creating together</h2>
-                    <a href="mailto:you@example.com" class="footer-cta-button">
+                    <a href="mailto:jay.pham25@gmail.com" class="footer-cta-button">
                         Let's talk
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true">
                             <path d="M7 17L17 7M17 7H7M17 7V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -246,7 +246,7 @@
                         <a href="index.html#work">Work</a>
                         <a href="about.html">About</a>
                         <a href="radio.html">Radio</a>
-                        <a href="mailto:you@example.com">Contact</a>
+                        <a href="mailto:jay.pham25@gmail.com">Contact</a>
                     </div>
                     
                     <div class="footer-social">
