Add live app link to friend.radio case study

--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
                             <li>Ops Tooling</li>
                             <li>Change Management</li>
                         </ul>
-                        <a href="cs-friend-radio.html" class="cs-button">View Case Study <span aria-hidden="true">→</span></a>
+                        <div class="case-buttons">
+                            <a href="cs-friend-radio.html" class="cs-button">View Case Study <span aria-hidden="true">→</span></a>
+                            <a href="https://friend-radio.vercel.app/" target="_blank" class="cs-button live-button">Live App <span aria-hidden="true">↗</span></a>
+                        </div>
                     </div>
                     <div class="case-visual">
                         <div class="device-frame">
