Replace old resume.pdf with new JP RESUME .pdf

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                                     <path d="M7 17L17 7M17 7H7M17 7V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
                             </a>
-                            <a href="resume.pdf" class="resume-button" target="_blank" rel="noopener noreferrer">
+                            <a href="JP RESUME .pdf" class="resume-button" target="_blank" rel="noopener noreferrer">
                                 Resume
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true">
                                     <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
