Add dynamic greeting feature with color cycling and minimal background pattern
- Added dynamic greetings effect that cycles through multiple languages
- Replaced preloader percentage with animated greeting
- Each greeting displays in unique color from palette
- Removed dot indicators for cleaner look
- Added smooth color transitions between greetings
- Added minimal dot grid and crosshatch background pattern
- Updated night mode with matching subtle background pattern

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <!-- Preloader -->
     <div class="preloader">
         <div class="loader-content">
-            <div class="loader-percentage">0%</div>
+            <div class="loader-greeting" id="loader-greeting" aria-label="Rapid greetings in different languages">
+                <div class="greeting-container">
+                    <span class="greeting-text" id="loader-greeting-text">Hello</span>
+                </div>
+            </div>
             <div class="loader-bar">
                 <div class="loader-progress"></div>
             </div>
@@ -73,6 +77,11 @@
             <div class="container narrow">
                 <h1 class="hero-title" id="scramble-title">JAY PHAM</h1>
                 <p class="hero-subtitle">PRODUCT DESIGNER</p>
+                <div class="dynamic-greeting" id="dynamic-greeting" aria-label="Rapid greetings in different languages">
+                    <div class="greeting-container">
+                        <span class="greeting-text" id="greeting-text">Hello</span>
+                    </div>
+                </div>
                 <p class="hero-datetime" id="datetime-scramble">Loading...</p>
                 <p class="hero-copy">SF Based multidisciplinary Designer, building and experimenting through design</p>
                 <div class="chevron" aria-hidden="true">
